system/argo/templates/argo-grpc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-cd-argocd-server-grpc-ingress
  namespace: argo
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/protocol: h2c
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: argo-cd-argocd-server
          servicePort: https
    host: grpc.argocd.kitsune.social
  tls:
  - hosts:
    - grpc.argocd.kitsune.social
